--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,10 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+html,
+body,
+#root,
+#root > div {
+    height: 100%;
+}
